fix(bhoe-ja): Fix horizontal scroll issue with the top nav bar and the expansion panel. Initial default tab if not params are passed in fix.

--- a/src/app/shared/label/label.component.scss
+++ b/src/app/shared/label/label.component.scss
@@ -1,11 +1,12 @@
 .label {
-  display: initial;
+  display: inline-table;
   padding: 2px 12px;
   border-radius: 16px;
   border-style: solid;
   border-color: #3f51b5;
   min-height: 32px;
   height: 1px;
+  text-align: center;
 
   position: relative;
   box-sizing: border-box;
